Adding real time search bar

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
     <button id="find">Find</button>
     <p id="result"></p>
 
+    <h2>🔍 Search in real time for a Book</h2>
+    <input type="text" id="searchR" placeholder="Book title">
+    <button id="findR">Find</button>
+    <div id="listR"></div>
+    <p id="resultR"></p>
 
 
 
